--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.armedia.acm</groupId>
@@ -21,6 +22,8 @@
 		<commons-text.version>1.10.0</commons-text.version>
 		<curator.version>5.5.0</curator.version>
 		<snakeyaml.version>1.14</snakeyaml.version>
+		<commons-cli.version>1.2</commons-cli.version>
+		<commons-beanutils.version>1.2.2.1</commons-beanutils.version>
 	</properties>
 
 	<organization>
@@ -67,6 +70,16 @@
 			<artifactId>snakeyaml</artifactId>
 			<version>${snakeyaml.version}</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>${commons-cli.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.guicedee.services</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${commons-beanutils.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -145,7 +158,8 @@
 					<target>${java.version}</target>
 					<compilerId>eclipse</compilerId>
 					<compilerArguments>
-						<properties>${project.basedir}/.settings/org.eclipse.jdt.core.prefs</properties>
+						<properties>
+							${project.basedir}/.settings/org.eclipse.jdt.core.prefs</properties>
 					</compilerArguments>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
@@ -197,17 +211,21 @@
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.2.1</version>
 				<configuration>
-					<finalName>${executableName}-${project.version}${build.number}-exe</finalName>
+					<finalName>
+						${executableName}-${project.version}${build.number}-exe</finalName>
 					<createSourcesJar>true</createSourcesJar>
 					<createDependencyReducedPom>false</createDependencyReducedPom>
 					<shadedArtifactAttached>true</shadedArtifactAttached>
 					<shadedClassifierName>exe</shadedClassifierName>
 					<transformers>
-						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 							<mainClass>com.armedia.acm.configserver.Main</mainClass>
 						</transformer>
-						<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-						<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
 							<addHeader>false</addHeader>
 						</transformer>
 					</transformers>
@@ -255,9 +273,9 @@
 							<goal>create-timestamp</goal>
 						</goals>
 						<configuration>
-								<timestampPropertyName>buildTimestamp</timestampPropertyName>
-								<timestampFormat>yyyy-MM-dd'T'HH:mm:ssZZ</timestampFormat>
-								<timezone>UTC</timezone>
+							<timestampPropertyName>buildTimestamp</timestampPropertyName>
+							<timestampFormat>yyyy-MM-dd'T'HH:mm:ssZZ</timestampFormat>
+							<timezone>UTC</timezone>
 						</configuration>
 					</execution>
 				</executions>
@@ -333,9 +351,15 @@
 								</requireMavenVersion>
 								<requireProperty>
 									<property>betaNumber</property>
-									<message>Must provide a valid betaNumber property (-DbetaNumber=...) for this build</message>
+									<message>Must provide a valid betaNumber
+										property (-DbetaNumber=...) for this
+										build</message>
 									<regex>^[0-9]*[1-9]0?$</regex>
-									<regexMessage>The beta number [${betaNumber}] is not composed of all digits, or is not a valid number (it may not be all-zeros, but may have leading zeros)</regexMessage>
+									<regexMessage>The beta number
+										[${betaNumber}] is not composed of all
+										digits, or is not a valid number (it may
+										not be all-zeros, but may have leading
+										zeros)</regexMessage>
 								</requireProperty>
 							</rules>
 						</configuration>
