--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>${commons-cli.version}</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
@@ -345,15 +346,9 @@
 								</requireMavenVersion>
 								<requireProperty>
 									<property>betaNumber</property>
-									<message>Must provide a valid betaNumber
-										property (-DbetaNumber=...) for this
-										build</message>
+									<message>Must provide a valid betaNumber property (-DbetaNumber=...) for this build</message>
 									<regex>^[0-9]*[1-9]0?$</regex>
-									<regexMessage>The beta number
-										[${betaNumber}] is not composed of all
-										digits, or is not a valid number (it may
-										not be all-zeros, but may have leading
-										zeros)</regexMessage>
+									<regexMessage>The beta number [${betaNumber}] is not composed of all digits, or is not a valid number (it may not be all-zeros, but may have leading zeros)</regexMessage>
 								</requireProperty>
 							</rules>
 						</configuration>
