--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 		<curator.version>5.5.0</curator.version>
 		<snakeyaml.version>1.14</snakeyaml.version>
 		<commons-cli.version>1.2</commons-cli.version>
+		<logback.version>1.4.8</logback.version>
+		<logback-colorizer.version>1.0.1</logback-colorizer.version>
 		<build.number>-SNAPSHOT-${scmBranch}-${buildNumber}</build.number>
 	</properties>
 
@@ -97,6 +99,18 @@
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>${commons-cli.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.tuxdude.logback.extensions</groupId>
+			<artifactId>logback-colorizer</artifactId>
+			<version>${logback-colorizer.version}</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
@@ -243,7 +257,7 @@
 						</transformer>
 					</transformers>
 				</configuration>
-                <executions>
+				<executions>
 				<execution>
 					<phase>package</phase>
 						<goals>
