--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<inceptionYear>2023</inceptionYear>
 
 	<properties>
-		<revision>1.3.0</revision>
+		<revision>1.4.0</revision>
 		<maven.min-version>3.3.9</maven.min-version>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,6 +25,7 @@
 		<curator.version>5.5.0</curator.version>
 		<snakeyaml.version>1.27</snakeyaml.version>
 		<commons-cli.version>1.2</commons-cli.version>
+		<maven-artifact.version>3.9.3</maven-artifact.version>
 		<logback.version>1.3.8</logback.version>
 		<logback-colorizer.version>1.0.1</logback-colorizer.version>
 		<junit-jupiter.version>5.9.3</junit-jupiter.version>
@@ -102,6 +103,12 @@
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>${commons-cli.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-artifact</artifactId>
+			<version>${maven-artifact.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
