--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<inceptionYear>2023</inceptionYear>
 
 	<properties>
-		<revision>1.4.6</revision>
+		<revision>1.5.0</revision>
 		<maven.min-version>3.8.6</maven.min-version>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,6 +23,7 @@
 
 		<commons-text.version>1.12.0</commons-text.version>
 		<curator.version>5.6.0</curator.version>
+		<zookeeper.version>3.9.2</zookeeper.version>
 		<snakeyaml.version>2.2</snakeyaml.version>
 		<commons-cli.version>1.7.0</commons-cli.version>
 		<maven-artifact.version>3.9.6</maven-artifact.version>
@@ -92,6 +93,11 @@
 			<artifactId>curator-recipes</artifactId>
 			<version>${curator.version}</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>${zookeeper.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.yaml</groupId>
