--- a/pom.xml
+++ b/pom.xml
@@ -14,23 +14,24 @@
 	<inceptionYear>2023</inceptionYear>
 
 	<properties>
-		<revision>1.6.0</revision>
+		<revision>1.7.0</revision>
 		<maven.min-version>3.8.6</maven.min-version>
 		<java.version>11</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<build.number>-SNAPSHOT-${scmBranch}-${buildNumber}</build.number>
 
-		<commons-text.version>1.12.0</commons-text.version>
-		<curator.version>5.6.0</curator.version>
-		<zookeeper.version>3.9.2</zookeeper.version>
-		<snakeyaml.version>2.2</snakeyaml.version>
-		<commons-cli.version>1.7.0</commons-cli.version>
-		<maven-artifact.version>3.9.6</maven-artifact.version>
-		<logback.version>1.4.12</logback.version>
+		<commons-text.version>1.14.0</commons-text.version>
+		<curator.version>5.9.0</curator.version>
+		<zookeeper.version>3.9.4</zookeeper.version>
+		<snakeyaml.version>2.5</snakeyaml.version>
+		<commons-cli.version>1.10.0</commons-cli.version>
+		<commons-lang.version>3.19.0</commons-lang.version>
+		<maven-artifact.version>3.9.11</maven-artifact.version>
+		<logback.version>1.5.19</logback.version>
 		<logback-colorizer.version>1.0.1</logback-colorizer.version>
-		<junit-jupiter.version>5.10.2</junit-jupiter.version>
-		<easymock.version>5.2.0</easymock.version>
+		<junit-jupiter.version>5.14.0</junit-jupiter.version>
+		<easymock.version>5.6.0</easymock.version>
 	</properties>
 
 	<organization>
@@ -112,6 +113,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-artifact</artifactId>
 			<version>${maven-artifact.version}</version>
@@ -154,7 +161,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>1.4.1</version>
+				<version>3.6.1</version>
 				<configuration>
 					<rules>
 						<requireMavenVersion>
@@ -174,7 +181,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
-				<version>2.1.0</version>
+				<version>2.7.0</version>
 				<configuration>
 					<licenseName>arkcase_license</licenseName>
 					<licenseResolver>classpath://arkcase</licenseResolver>
@@ -203,7 +210,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.1.0</version>
+				<version>3.3.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -217,7 +224,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.14.1</version>
 				<configuration>
 					<encoding>${project.build.sourceEncoding}</encoding>
 					<source>${java.version}</source>
@@ -242,7 +249,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.1.1</version>
+				<version>3.12.0</version>
 				<configuration>
 					<failOnError>false</failOnError>
 					<doclint>none</doclint>
@@ -260,7 +267,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.5.4</version>
 				<configuration>
 					<parallel>classes</parallel>
 					<threadCount>10</threadCount>
@@ -271,7 +278,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.1</version>
+				<version>3.6.1</version>
 				<configuration>
 					<finalName>${project.artifactId}-${project.version}${build.number}-exe</finalName>
 					<createSourcesJar>true</createSourcesJar>
@@ -300,7 +307,7 @@
 			<plugin>
 				<groupId> org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
-				<version>1.4</version>
+				<version>3.2.1</version>
 				<executions>
 					<execution>
 						<id>create-commitHash</id>
@@ -352,7 +359,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.2</version>
+				<version>3.4.2</version>
 				<configuration>
 					<archive>
 						<manifestEntries>
@@ -371,7 +378,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>flatten-maven-plugin</artifactId>
-				<version>1.3.0</version>
+				<version>1.7.3</version>
 				<configuration>
 					<updatePomFile>true</updatePomFile>
 					<flattenMode>resolveCiFriendliesOnly</flattenMode>
@@ -412,7 +419,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-enforcer-plugin</artifactId>
-						<version>1.4.1</version>
+						<version>3.6.1</version>
 						<configuration>
 							<rules>
 								<requireMavenVersion>
